public/css/coco.css
@font-face {
  font-family: 'HawaiianPunk';
  src: url('font/hawaiian-punk/hpunk.ttf')  format('truetype');
}

html, body {
    height: 100%;
    width: 100%;
}

body {
    font-family: "HawaiianPunk";
    padding-top: 40px;
    background: #70e1f5;
    background: -webkit-linear-gradient(to left, #70e1f5 , #ffd194); 
    background: linear-gradient(to left, #70e1f5 , #ffd194); 
}

a {
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
}

.container-fluid {
    margin: 0;
    padding: 0;
}

.navbar {
    background-color: #fffbf4;
    border: none;
    padding-left: 15px;
    padding-top: 5px;
}

.navbar-brand {
    padding: 0;
}

.navbar-brand>img {
    height: 100%;
    padding: 3px;
    width: auto;
}

.navbar-default .navbar-nav>li>a {
    color: #e0b582;
    font-size: 1.3em;
}

.navbar-default .navbar-nav>li>a:active {
    color: #e0b582;
}

.navbar-default .navbar-nav>.active>a, .navbar-default .navbar-nav>.active>a:focus, .navbar-default .navbar-nav>.active>a:hover {
    color: #e0b582;
    background: #fffbf4;
    border: 1px solid #e0b582;
}

#brand-text {
    text-decoration: none;
    color: #725025;
    font-size: 1.3em;
}

.navbar-default .navbar-nav>li>a:hover {
    color: #9b6d2d;
}

.block {
    height: 680px;
    background-size: cover;
    -o-background-size: cover;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-position: center;
    background-repeat: no-repeat;
    margin: none;
}

#block1 {
    background-image: url('../img/cocoBackground.jpg');
}

#block2 {
    background-image: url('../img/cocosun.jpeg');
    text-align: center;
}

#block3, #block4 {
    height: auto;
    min-height: 100% !important;
}

#block5 {
    height: 400px;
}

.content{
    font-size: 5em;
    color: white;
    text-align: center;
    position: relative;
    top: 85%;
    transform: perspective(1px) translateY(-85%);
    margin: 0;
    text-shadow: 0px 4px 3px rgba(114, 80, 37, 0.6),
                 0px 8px 13px rgba(114, 80, 37, 0.3),
                 0px 18px 23px rgba(114, 80, 37, 0.3);
}

h3.content {
    top: 75%;
    transform: perspective(1px) translateY(-75%);
    font-size: 3em;
}

p.content {
    top: 75%;
    transform: perspective(1px) translateY(-75%);
    font-size: 2.5em;
}

.product hr {
    width: 80%;
    border: 0;
    height: 1px;
    background-image: linear-gradient(to right, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.75), rgba(0, 0, 0, 0));
}

.divider {
    width: 400px;
    border-top: 1px solid #f8f8f8;
    border-bottom: 1px solid rgba(0, 0, 0, 0.2);
}

#galleryLine {
    margin-bottom: 50px;
}

.img-responsive {
    margin: 0 auto;
}

.cartButton {
    margin: 0 auto;
    color: #725025;
    display: block;
    border: 1px solid #9b6d2d;
    outline: none;
    background-color: #fffbf4;
    transition: all 0.35s;
    -moz-transition: all 0.35s;
    -webkit-transition: all 0.35s;
}


.cartButton:hover {
    background-color: #9b6d2d;
    color: white;
    outline: none;
}

.cartButton:focus {
    background-color: #9b6d2d;
    color: white;
    outline: none;
}

.subtitle {
    color: #725025;
    text-align: center;
    font-size: 2.5em;
}

.product {
    background-color: white;
    margin: 10%;
    border: 1px solid rgba(0, 0, 0, 0.2);
    padding: 3%;
    transition: all 0.3s;
    -moz-transition: all 0.3s;
    -webkit-transition: all 0.3s;
}

.product:hover {
    margin: 8%;
}

.title {
    font-size: 4em;
    color: white;
    text-align: center;
    position: relative;
    margin: 3% auto 1% auto;
    text-shadow: 0px 4px 3px rgba(114, 80, 37, 0.6),
                 0px 8px 13px rgba(114, 80, 37, 0.3),
                 0px 18px 23px rgba(114, 80, 37, 0.3);
}

#social {
    margin-top: 5%;
    font-size: 4em;
    text-align: center;
}


.item-image {
  position: relative;
  overflow: hidden;
  padding-bottom: 76%; /* here the desired aspect ratio */
}

.item-image img {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  margin: auto;
}

.content2 {
    font-size: 3em;
    color: white;
    text-align: center;
    margin: 0;
    padding-top: 36%;
    text-shadow: 0px 4px 3px rgba(114, 80, 37, 0.6),
                 0px 8px 13px rgba(114, 80, 37, 0.3),
                 0px 18px 23px rgba(114, 80, 37, 0.3);
}

.readMore {
    font-size: 2.5em;
    text-align: center;
    margin: 0 auto;
    color: #4ca2ff;
    display: inline-block;
    margin-top: 2.5%;
    text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4),
                 0px 8px 13px rgba(0, 0, 0, 0.1),
                 0px 18px 23px rgba(0, 0, 0, 0.1);
}

.readMore:hover, .readMore:focus {
    text-decoration: none;
    color: #2e84e6;    
}

#lastTitle {
    font-size: 4em;
    color: white;
    text-align: center;
    position: relative;
    padding-top: 3%;
    margin: 3% auto 3% auto;
    text-shadow: 0px 4px 3px rgba(114, 80, 37, 0.6),
                 0px 8px 13px rgba(114, 80, 37, 0.3),
                 0px 18px 23px rgba(114, 80, 37, 0.3);
}

#lastSub {
    font-size: 3.0em;
    color: white;
    text-align: center;
    position: relative;
    margin: 1% auto 1% auto;
    text-shadow: 0px 4px 3px rgba(114, 80, 37, 0.6),
                 0px 8px 13px rgba(114, 80, 37, 0.3),
                 0px 18px 23px rgba(114, 80, 37, 0.3);
}


.no-padding {
  padding: 0;
}

.portfolio-box {
  position: relative;
  display: block;
  max-width: 650px;
  margin: 0 auto;
}
.portfolio-box .portfolio-box-caption {
  color: white;
  opacity: 0;
  display: block;
  background:#e0b582;
  position: absolute;
  bottom: 0;
  text-align: center;
  width: 100%;
  height: 100%;
  -webkit-transition: all 0.35s;
  -moz-transition: all 0.35s;
  transition: all 0.35s;
}
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
  width: 100%;
  text-align: center;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category,
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
  font-family: 'Open Sans', 'Helvetica Neue', Arial, sans-serif;
  padding: 0 15px;
}
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
  text-transform: uppercase;
  font-weight: 600;
  font-size: 14px;
}
.portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
  font-size: 18px;
}
.portfolio-box:hover .portfolio-box-caption {
  opacity: 1;
}
.portfolio-box:focus {
  outline: none;
}
@media (min-width: 768px) {
  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-category {
    font-size: 16px;
  }
  .portfolio-box .portfolio-box-caption .portfolio-box-caption-content .project-name {
    font-size: 22px;
  }
}

.no-gutter > [class*='col-'] {
  padding-right: 0;
  padding-left: 0;
}

